--- a/shipbatle.html
+++ b/shipbatle.html
@@ -95,29 +95,52 @@
    </form>
     </div>
     <script src="battleship.js">
-    var view ={
-      displayMessage:function(msg){
-        var messageArea a= document.getElementById("messageArea");//获取网页中的元素messageArea
-        messageArea.innerHTML =msg;//将元素messageArea的innerHTML设置为msg，以更新该元素的文本
+
+      var view ={
+	displayMessage:function(msg){
+		var messageArea = document.getElementById("messageArea");//获取网页中的元素messageArea
+		messageArea.innerHTML =msg;//将元素messageArea的innerHTML设置为msg，以更新该元素的文本
 
 
 
-      },
-      
-      displayHit:function(location){//location是根据行号和列号生成的，它是一个<td>元素的id，根据玩家的猜测获取更多元素
-      var cell =document.getElementById(location);
-      cell.setAttribute("class","hit");//将td元素里的class特性设置为hit，这将立即在这个元素中显示战舰图像，将这个元素的class设为hit
+	},
+	
+	displayHit:function(location){//location是根据行号和列号生成的，它是一个<td>元素的id，根据玩家的猜测获取更多元素
+	var cell =document.getElementById(location);
+	cell.setAttribute("class","hit");//将td元素里的class特性设置为hit，这将立即在这个元素中显示战舰图像，将这个元素的class设为hit
 
-      },
-      displayMiss:function(location){
-       var cell=document.getElementById(location);
-       cell.setAttribute("class","miss")//将class性质设为miss，在元素中显示miss图像
+	},
+	displayMiss:function(location){
+	 var cell=document.getElementById(location);
+	 cell.setAttribute("class","miss")//将class性质设为miss，在元素中显示miss图像
 
-      }
+	}
 
-    }
-    view.displayMiss("00");
-    view.displayHit("34");
+}
+view.displayMiss("00");//Hit和Miss将一个游戏板中的位置作为参数。这个参数对应一个单元格的id，
+											 //它是将一个字母和一个数字转换为有俩个个数字组成的字符串
+view.displayHit("34");
+view.displayMiss("55");
+view.displayHit("12");
+view.displayMiss("25");
+view.displayHit("26");
+view.displayMessage("Tap tap,is this thing on?");
+ 
+//每艘战舰都是一个对象
+var ships =[{
+		locations:("10","20","30"),//属性locations是一个数组，其中储存了战舰战局的游戏板单元格
+		hits: ["","",""]//hits也是一个数组，指出战舰某个部位被击中时。我们将该数组的每个元素都初始化为空字符串，并在战舰的某个部位被击中时将对应的元素改为“hit”
+},
+{
+    locations:["10","20","30"],
+    hits: ["","",""]
+},
+{ 
+    locations:["63","64","65"],
+    hits: ["","","hit"],
+}];
+  
+ 
     </script><!--我们将把代码放在文件battleship中因此要先为此创建一个空白文件-->
   </body>
 </html>
