--- a/shipbatle.html
+++ b/shipbatle.html
@@ -1,146 +1,154 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-e">
-    <title>Battleship</title>
-    <style>
+
+<head>
+  <meta charset="utf-e">
+  <title>Battleship</title>
+  <style>
     body {
       background-color: black;
     }
-   div#board {
+
+    div#board {
       position: relative;
       width: 1024PX;
       height: 863PX;
       margin: auto;
-      background:url("board.jpg") no-repeat;
+      background: url("board.jpg") no-repeat;
 
     }
-     div#messageArea{
+
+    div#messageArea {
       position: absolute;
       top: 0px;
       left: 0px;
-      color: rgb(83,175,19);
-     }
-     table{
-       position: absolute;
-       left:173px;
-       top:98px;
+      color: rgb(83, 175, 19);
+    }
+
+    table {
+      position: absolute;
+      left: 173px;
+      top: 98px;
       border-spacing: 0px;
-     }
-     td {
-       width:94px; 
-       height: 94px;
-     }
-     form{
-       position: absolute;
-       bottom: 0px;
-       right:0px;
-       padding:15px;
-       background-color: rgb(83,175,19);
-     }
-     form input{
-       background-color: rgb(152,207,113);
-       border-color:rgb(83,175,19) ;
-       font-size:1em;
-     }
-     .hit{
-       background:url("ship.png") no-repeat center center;
-     }
-     miss{
-       background: url ("miss.png")no-repeat center center;
-     }
-    </style>
-  </head>
-  <body>
-    <div id="board"><!-- 将div元素中添加表示游戏板的网格以及用于获取玩家输入的表单-->
-    <div id="messageArea"></div><!--用来显示消息messageArea-->
-   <table> <!--将表格嵌套在div元素board内-->
-     <tr>
-       <td id="00"></td><td id="01"></td><td id="02"></td><td id="03"></td>
-      <td id="04"></td><td id="05"></td><td id="06"></td><!--对应行和列-->
-     </tr>
-     <tr>
-       <td id="10"></td> <td class="hit"id="11"></td><td id="12"></td><td id="13" class="hit"></td>
-       <td id="14"></td> <td id="15"></td><td id="16"></td>
-     </tr>
-     <tr>
-        <td id="20"></td><td id="21"></td><td id="22"></td><td id="23"></td>
-      <td id="24"></td><td id="25"></td><td id="26"></td>
+    }
 
-     </tr>
-     <tr>
-        <td id="30"></td><td id="31"></td><td id="32"></td><td id="33"></td>
-      <td id="34"></td><td id="35"></td><td id="36"></td>
+    td {
+      width: 94px;
+      height: 94px;
+    }
 
-     </tr>
-     <tr>
-        <td id="40"></td><td id="41"></td><td id="42"></td><td id="43"></td>
-      <td id="44"></td><td id="45"></td><td id="46"></td>
+    form {
+      position: absolute;
+      bottom: 0px;
+      right: 0px;
+      padding: 15px;
+      background-color: rgb(83, 175, 19);
+    }
 
-     </tr>
-     <tr>
-        <td id="50"></td><td id="51"></td><td id="52"></td><td id="53"></td>
-      <td id="54"></td><td id="55"></td><td id="56"></td>
+    form input {
+      background-color: rgb(152, 207, 113);
+      border-color: rgb(83, 175, 19);
+      font-size: 1em;
+    }
 
-     </tr>
-     <tr>
-        <td id="60"></td><td id="61"></td><td id="62"></td><td id="63"></td>
-      <td id="64"></td><td id="65"></td><td id="66"></td>
+    .hit {
+      background: url("ship.png") no-repeat center center;
+    }
 
-     </tr>
-   </table>
-   <form>
-     <input type="text" id="guessInput"  placeholder="A0"><!--用于猜测位置-->
-     <input type="button"  id="fireButton" value="Fire!"><!--按钮-->
-   </form>
-    </div>
-    <script src="battleship.js">
+    .miss {
+      background: url ("miss.png")no-repeat center center;
+    }
+  </style>
+</head>
 
-      var view ={
-	displayMessage:function(msg){
-		var messageArea = document.getElementById("messageArea");//获取网页中的元素messageArea
-		messageArea.innerHTML =msg;//将元素messageArea的innerHTML设置为msg，以更新该元素的文本
+<body>
+  <div id="board">
+    <!-- 将div元素中添加表示游戏板的网格以及用于获取玩家输入的表单-->
+    <div id="messageArea"></div>
+    <!--用来显示消息messageArea-->
+    <table>
+      <!--将表格嵌套在div元素board内-->
+      <tr>
+        <td id="00"></td>
+        <td id="01"></td>
+        <td id="02"></td>
+        <td id="03"></td>
+        <td id="04"></td>
+        <td id="05"></td>
+        <td id="06"></td>
+        <!--对应行和列-->
+      </tr>
+      <tr>
+        <td id="10"></td>
+        <td id="11"></td>
+        <td id="12"></td>
+        <td id="13"></td>
+        <td id="14"></td>
+        <td id="15"></td>
+        <td id="16"></td>
+      </tr>
+      <tr>
+        <td id="20"></td>
+        <td id="21"></td>
+        <td id="22"></td>
+        <td id="23"></td>
+        <td id="24"></td>
+        <td id="25"></td>
+        <td id="26"></td>
 
+      </tr>
+      <tr>
+        <td id="30"></td>
+        <td id="31"></td>
+        <td id="32"></td>
+        <td id="33"></td>
+        <td id="34"></td>
+        <td id="35"></td>
+        <td id="36"></td>
 
+      </tr>
+      <tr>
+        <td id="40"></td>
+        <td id="41"></td>
+        <td id="42"></td>
+        <td id="43"></td>
+        <td id="44"></td>
+        <td id="45"></td>
+        <td id="46"></td>
 
-	},
-	
-	displayHit:function(location){//location是根据行号和列号生成的，它是一个<td>元素的id，根据玩家的猜测获取更多元素
-	var cell =document.getElementById(location);
-	cell.setAttribute("class","hit");//将td元素里的class特性设置为hit，这将立即在这个元素中显示战舰图像，将这个元素的class设为hit
+      </tr>
+      <tr>
+        <td id="50"></td>
+        <td id="51"></td>
+        <td id="52"></td>
+        <td id="53"></td>
+        <td id="54"></td>
+        <td id="55"></td>
+        <td id="56"></td>
 
-	},
-	displayMiss:function(location){
-	 var cell=document.getElementById(location);
-	 cell.setAttribute("class","miss")//将class性质设为miss，在元素中显示miss图像
+      </tr>
+      <tr>
+        <td id="60"></td>
+        <td id="61"></td>
+        <td id="62"></td>
+        <td id="63"></td>
+        <td id="64"></td>
+        <td id="65"></td>
+        <td id="66"></td>
 
-	}
+      </tr>
+    </table>
+    <form>
+      <input type="text" id="guessInput" placeholder="A0">
+      <!--用于猜测位置-->
+      <input type="button" id="fireButton" value="Fire!">
+      <!--按钮-->
+    </form>
+  </div>
+  <script src="battleship.js">
 
-}
-view.displayMiss("00");//Hit和Miss将一个游戏板中的位置作为参数。这个参数对应一个单元格的id，
-											 //它是将一个字母和一个数字转换为有俩个个数字组成的字符串
-view.displayHit("34");
-view.displayMiss("55");
-view.displayHit("12");
-view.displayMiss("25");
-view.displayHit("26");
-view.displayMessage("Tap tap,is this thing on?");
- 
-//每艘战舰都是一个对象
-var ships =[{
-		locations:("10","20","30"),//属性locations是一个数组，其中储存了战舰战局的游戏板单元格
-		hits: ["","",""]//hits也是一个数组，指出战舰某个部位被击中时。我们将该数组的每个元素都初始化为空字符串，并在战舰的某个部位被击中时将对应的元素改为“hit”
-},
-{
-    locations:["10","20","30"],
-    hits: ["","",""]
-},
-{ 
-    locations:["63","64","65"],
-    hits: ["","","hit"],
-}];
-  
- 
-    </script><!--我们将把代码放在文件battleship中因此要先为此创建一个空白文件-->
-  </body>
+  </script>
+  <!--我们将把代码放在文件battleship中因此要先为此创建一个空白文件-->
+</body>
+
 </html>
